# palingenesis

./: .gitignore  AGENTS.md  README.md  mkdocs.yml  pyproject.toml  run.sh
.github/workflows/: docs.yaml
agent_tooling/: __init__.py  __main__.py  _path_setup.py  check_gradients.py  check_loss.py  diagnose.py  inspect_batch.py  monitor_run.py  profile_memory.py  validate_masking.py
configs/: agentic_traces.yaml  distill_chat.yaml  distill_opd.yaml  gemma4_12b.yaml  gemma4_e2b.yaml  gemma4_e4b.yaml  llama3_8b.yaml  long_context.yaml  mixed_data.yaml  quickstart.yaml  qwen35_08b.yaml  qwen35_35b_moe.yaml  qwen35_4b.yaml  qwen3_08b.yaml  single_gpu.yaml
configs/qwen35_08b/: a100_40gb.yaml  a100_80gb.yaml
configs/qwen35_35b_moe/: a100_80gb.yaml  a100_80gb_multigpu.yaml  b200.yaml  h100_multigpu.yaml
configs/qwen35_4b/: a100_40gb.yaml  a100_80gb.yaml  a100_80gb_largescale.yaml  a100_80gb_multidataset.yaml  a100_80gb_multigpu.yaml  a100_80gb_test.yaml  b200.yaml  h100_80gb.yaml  h100_multigpu.yaml
docs/: agent_tooling.md  architecture.md  autopilot.md  checkpointing.md  configuration.md  data_guide.md  data_pipeline.md  distributed.md  examples.md  gemma4_guide.md  health_metrics.md  on_policy_distillation.md  optimizations.md  packing.md  paper_analysis.md  performance.md  plugins.md  research_findings.md  self_improvement.md  stability.md  training_guide.md  training_strategies.md
docs/plugins/: README.md
mkdocs_docs/: contributing.md  index.md
mkdocs_docs/architecture/: overview.md  (+2 more)
scripts/: diagnose.sh  prepare_data.sh  train_long_context.sh  train_multi_gpu.sh  train_multi_node.sh  train_single_gpu.sh  train_slurm.sh
tests/: conftest.py  test_adaptive_sweep.py  test_autopilot_wiring.py  test_checkpoint_optimizer.py  test_cli_config_and_sharding.py  test_config_validation.py  test_deep_techniques.py  test_distributed.py  test_empty_source_and_packing.py  test_fallback_offsets.py  test_integration.py  test_label_shift_and_loss_family.py  test_last_turn_integration.py  test_length_grouping.py  test_memory.py  test_msft.py  test_multi_eval.py  test_opd.py  test_opd_engine.py  test_optim_and_health.py  test_perf_techniques.py  test_preprocess_and_logging.py  test_pretokenize.py  test_reasoning_masking.py  test_s0_tuning.py  test_streaming_shard.py  test_tfp.py  test_train_loop.py  test_validate_data.py
utils/: NEXT_STEPS.md  fetch_papers.py
(+63 files in other folders)
